--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,14 +17,14 @@
         "name": "next"
       }
     ],
+    "baseUrl": "./src",
     "paths": {
-      "@/*": ["./src/*"],
-      "@/library/*": ["./src/app/(app-library)/*"],
-      "@/quiz/*": ["./src/app/(app-quiz)/*"],
-      "@/todo/*": ["./src/app/(app-task-manager)/*"],
-      "@/landing/*": ["./src/app/(website)/*"],
-      "@/dashboard/*": ["./src/app/(dashboard)/*"],
-      "@/auth/*": ["./src/app/(auth)/*"],
+      "@/*": ["*"],
+      "@/components/*": ["components/*"],
+      "@/styles/*": ["styles/*"],
+      "@/lib/*": ["lib/*"],
+      "@/types/*": ["types/*"],
+      "@/hooks/*": ["hooks/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
