--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "format": "npx prettier --write **/*.{js,jsx,ts,tsx}"
   },
   "dependencies": {
-    "@nextui-org/react": "^2.4.8",
+    "@headlessui/react": "^2.2.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.10",
     "lucide-react": "^0.453.0",
